--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ body {
 
 #square:hover {
     background-color:  #af9deb !important;
-    cursor: crosshair;
 }
 
 #starter-button {
@@ -59,5 +58,11 @@ body {
     flex-grow: 1;
 }
 
+#container {
+    display: flex;
+    align-items: center;
+}
 
-
+#container > *:hover{
+    cursor: crosshair;
+}
